z-index fix

--- a/project/example/CMRLibrary.css
+++ b/project/example/CMRLibrary.css
@@ -69,7 +69,6 @@
     position: absolute;
     box-shadow: 0px 0px 0px 20000px #00000080;
     outline: 1px solid violet;
-    z-index: 2;
 }
 
 .cmr-resize {
@@ -118,7 +117,7 @@
     width: 6px;
     height: 6px;
     background-color: violet;
-    z-index: 1;
+    z-index: 2;
 }
 
 .cmr-resizer-point {
@@ -130,21 +129,18 @@
 }
 
 .cmr-point-e {
-    cursor: move;
     margin-top: -3px;
     right: -3px;
     top: 50%;
 }
 
 .cmr-point-n {
-    cursor: move;
     left: 50%;
     margin-left: -3px;
     top: -3px;
 }
 
 .cmr-point-w {
-    cursor: move;
     left: -3px;
     margin-top: -3px;
     top: 50%;
@@ -152,32 +148,27 @@
 
 .cmr-point-s {
     bottom: -3px;
-    cursor: move;
     left: 50%;
     margin-left: -3px;
 }
 
 .cmr-point-ne {
-    cursor: move;
     right: -3px;
     top: -3px;
 }
 
 .cmr-point-nw {
-    cursor: move;
     left: -3px;
     top: -3px;
 }
 
 .cmr-point-sw {
     bottom: -3px;
-    cursor: move;
     left: -3px;
 }
 
 .cmr-point-se {
     bottom: -3px;
-    cursor: move;
     opacity: 1;
     right: -3px;
 }
